--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="./static/comment_page/bootstrap.css"> -->
-    <!-- <link rel="stylesheet" href="./static/users_page/bootstrap.css"> -->
+    <link rel="stylesheet" href="./static/users_page/bootstrap.css">
     <title>vue_demo</title>
-    <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
+    <!-- <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script>
       if ('addEventListener' in document) {
         document.addEventListener('DOMContentLoaded', function() {
           FastClick.attach(document.body);
         }, false);
       }
-    </script>
+    </script> -->
+    <style>
+      .router-link-active{
+        color: red !important;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
